--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-router": "^4.0.20",
+    "expo-speech": "~13.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -32,8 +33,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "^0.20.0",
-    "expo-speech": "~13.0.1"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
